# eposx_hardware

./: .gitignore  README.md
epos_hardware/: 99-ftdi.rules  CMakeLists.txt  install_udev_rules  package.xml
epos_hardware/include/epos_hardware/: epos.h  epos_diagnostic_updater.h  epos_hardware.h  epos_manager.h  epos_operation_mode.h  utils.h
epos_hardware/launch/: example.launch  example.urdf  example.yaml
epos_hardware/src/nodes/: epos_hardware_node.cpp
epos_hardware/src/tools/: get_state.cpp  list_devices.cpp  list_nodes.cpp
epos_hardware/src/util/: epos.cpp  epos_diagnostic_updater.cpp  epos_hardware.cpp  epos_manager.cpp  epos_operation_mode.cpp  utils.cpp
epos_library/: CMakeLists.txt  install_udev_rules.sh
epos_library/include/epos_library/: Definitions.h
eposx_hardware/: CMakeLists.txt  package.xml
eposx_hardware/config/: joint1_motor.yaml  joint2_motor.yaml  joint3_motor.yaml  joint4_motor.yaml
eposx_hardware/include/eposx_hardware/: epos.h  epos_diagnostic_updater.h
eposx_hardware/launch/: epos_arm.launch  example.launch  example.urdf  example.yaml
eposx_hardware/src/tools/: get_state.cpp
eposx_hardware/src/util/: epos.cpp  epos_diagnostic_updater.cpp  utils.cpp
eposx_library/: CHANGELOG.rst  CMakeLists.txt  package.xml
