<?xml version="1.0"?>
<package>
  <name>eposx_hardware</name>
  <version>0.0.2</version>
  <description>A wrapper around the EPOS Command Library to provide easy integration with ROS control</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/RIVeR-Lab/epos_hardware</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>battery_state_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>eposx_library</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>dynamic_joint_limits_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>battery_state_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>eposx_library</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>dynamic_joint_limits_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
